# Latent-Effect-and-Handlers

./: .gitignore  CHANGELOG.md  latent-effects.cabal
src/Latent/: Effects.hs
src/Latent/Effects/: Abstraction.hs  Arithmetics.hs  Delay.hs  Errors.hs  Exceptions.hs  Memoization.hs  Print.hs  Reader.hs  State.hs
src/Latent/Features/: Arithmetics.hs  CallByName.hs  CallByNeed.hs  CallByValue.hs  Let.hs  Print.hs  Staging.hs
